--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,63 @@ input[type="number"] {
 	color: red;
 	min-height: 10px;
 }
+/* custom checkbox color */
+.checkbox label {
+	display: inline-block;
+	vertical-align: middle;
+	position: relative;
+	padding-left: 5px;
+}
+
+.checkbox label::before {
+	content: "";
+	display: inline-block;
+	position: absolute;
+	width: 17px;
+	height: 17px;
+	left: 0;
+	margin-left: -20px;
+	border: 1px solid #cccccc;
+	border-radius: 3px;
+	background-color: #fff;
+	-webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+	-o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+	transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+	top: 5px;
+}
+
+.checkbox label::after {
+	display: inline-block;
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	left: 0;
+	top: 5px;
+	margin-left: -20px;
+	padding-left: 3px;
+	padding-top: 1px;
+	font-size: 11px;
+	color: #555555;
+}
+.checkbox input[type="checkbox"] {
+	opacity: 0;
+	z-index: 1;
+	outline: 1px solid #5b5675;
+}
+
+.checkbox input[type="checkbox"]:checked + label::after {
+	font-family: "FontAwesome";
+	content: "\f00c";
+}
+
+.checkbox-info input[type="checkbox"]:checked + label::before {
+	background-color: #36CBFF;
+	border-color: #36CBFF;
+}
+
+.checkbox-info input[type="checkbox"]:checked + label::after {
+	color: #fff;
+}
 /* ====================LOGIN====================== */
 
 /* signup container */
